[frontend] chess board ui

--- a/client/src/styles/react-chess/_components.scss
+++ b/client/src/styles/react-chess/_components.scss
@@ -2,6 +2,12 @@
 @import "components/menu";
 @import "components/game-status";
 @import "components/game-main";
+@import "components/chess-footer";
+@import "components/room-details";
+@import "components/chess-board";
+
+
+
 
 
 
