[fe] chat in game v1

--- a/client/src/styles/react-chess/_components.scss
+++ b/client/src/styles/react-chess/_components.scss
@@ -5,6 +5,8 @@
 @import "components/chess-footer";
 @import "components/room-details";
 @import "components/chess-board";
+@import "components/chat-client";
+
 
 
 
