add get user infor

--- a/client/src/styles/react-chess/_components.scss
+++ b/client/src/styles/react-chess/_components.scss
@@ -6,8 +6,7 @@
 @import "components/room-details";
 @import "components/chess-board";
 @import "components/chat-client";
-
-
+@import "components/account";
 
 
 
