add dashbord screen and analytic database

--- a/client/src/styles/react-chess/_components.scss
+++ b/client/src/styles/react-chess/_components.scss
@@ -7,6 +7,9 @@
 @import "components/chess-board";
 @import "components/chat-client";
 @import "components/account";
+@import "components/dashboard"; 
+@import "components/vertical-bar"; 
+
 
 
 
