--- a/client/src/styles/react-chess/components/_dashboard.scss
+++ b/client/src/styles/react-chess/components/_dashboard.scss
@@ -1,7 +1,10 @@
 .dashboard{
+    display: flex;
+    padding-top: 10px;
     .user-pay{
+        margin-bottom: 10px;
+        padding-top: 5px;
         width: 600px;
-        height: auto;
     }
     
 }
