dashboard add chart and total int

--- a/client/src/styles/react-chess/_components.scss
+++ b/client/src/styles/react-chess/_components.scss
@@ -9,6 +9,11 @@
 @import "components/account";
 @import "components/dashboard"; 
 @import "components/vertical-bar"; 
+@import "components/polar"; 
+@import "components/line-chart"; 
+@import "components/box"; 
+
+
 
 
 
