[fe] dashboard report user

--- a/client/src/styles/react-chess/_components.scss
+++ b/client/src/styles/react-chess/_components.scss
@@ -8,7 +8,8 @@
 @import "components/chat-client";
 @import "components/account";
 @import "components/dashboard"; 
-@import "components/vertical-bar"; 
+@import "components/vertical-bar";
+@import "components/horizontal-bar"; 
 @import "components/polar"; 
 @import "components/line-chart"; 
 @import "components/box"; 
