--- a/client/src/styles/react-chess/components/_box.scss
+++ b/client/src/styles/react-chess/components/_box.scss
@@ -1,6 +1,6 @@
 .box{
     display: block;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+    font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji;
     font-variant: tabular-nums;
     line-height: 1.5715;
     font-feature-settings: 'tnum', "tnum";
@@ -8,25 +8,39 @@
     height: 210px;
     box-shadow: rgba(143, 168, 191, 0.35) 0px 8px 20px 0px; 
     .box-title{
-        margin-left: 10px;
+        font-size: .88rem;
+        font-weight: 400;
+        line-height: 1.5;
+        color: #495057;
+        text-align: center;
+        opacity: .6;
     }
     .box-avatar{
-        // align-items: center;
-        margin-top: -20px;
-
+        padding-left: 2rem;
+        align-items: center;
+        display: flex;
+        margin-top: -10px;
         text-align: center;
         img{
-            height: 120px;
+            height: 110px;
+        }
+        p{
+            font-weight: bold;
+            margin-top: 14px;
+            color: #3ac47d;
+        }
+        .decrease{
+            margin-top: 14px;
+            color: #c4433a;
         }
     }
     .box-value{
-        h1{
-            font-weight: 200;
-
-        }
-        font-size: 14px;
+        margin-top: -20px;
+        font-size: 43px;
+        font-weight: bold;
+        color: #495057;
         text-align: center;
-        // margin-right: 15px;
-        margin-top: -15px;
+        padding-bottom: 2px;
+
     }
 }
