[fe] add header int something

--- a/client/src/styles/react-chess/_components.scss
+++ b/client/src/styles/react-chess/_components.scss
@@ -1,18 +1,12 @@
-@import "components/login";
-@import "components/menu";
-@import "components/game-status";
-@import "components/game-main";
-@import "components/chess-footer";
-@import "components/room-details";
-@import "components/chess-board";
-@import "components/chat-client";
+
 @import "components/account";
-@import "components/dashboard"; 
 @import "components/vertical-bar";
 @import "components/horizontal-bar"; 
 @import "components/polar"; 
 @import "components/line-chart"; 
 @import "components/box"; 
+@import "components/ant-header"; 
+
 
 
 
