[fe] add register screen but not implement api

--- a/client/src/styles/react-chess/_views.scss
+++ b/client/src/styles/react-chess/_views.scss
@@ -1,4 +1,5 @@
 @import "views/login";
+@import "views/register"; 
 @import "views/chess-footer";
 @import "views/room-details";
 @import "views/chess-board";
